<?xml version="1.0" encoding="utf-8"?>
<resources>
    

    <string name="app_name">Bíblia do Brasileirão</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="symbol">Símbolo</string>
    <string name="statisticsInitial">Seu time é:</string>
    <string name="teamLogo">Your Team Logo</string>
    <string name="choose_year">Ano</string>
    <string name="choose_type">Tipo</string>
    <string name="resultado">Resultado</string>
    <string name="pesquise">Pesquise</string>

    <string-array name="button_confronto_direto">
        <item>Rodada Da Semana</item>
        <item>Histórico De Confronto</item>
        <item>Estatísticas de Jogos</item>
        <item>Estatísticas de Gols</item>
    </string-array>
    
    
    
    <string-array name="button_champ_stats">
        <item>Jogos Em Casa</item>
        <item>Jogos Fora</item>
        <item>Gols Pró Em Casa</item>
        <item>Gols Pró Fora</item>
        <item>Gols Tomados Em Casa</item>
        <item>Gols Tomados Fora</item>
    </string-array>
    
    
    <string-array name="year_arrays">
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
    </string-array>
    <string-array name="type_arrays">
        <item>mandante</item>
        <item>visitante</item>
        <item>ambos</item>
    </string-array>

</resources>