<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#127826"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" >

            <TextView
                android:id="@+id/nameInitial"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/statisticsInitial"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dip"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/teamLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dip"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/nameInitial"
                android:contentDescription="@string/teamLogo" />
        </RelativeLayout>

        <com.components.Line
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#969696" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            android:layout_weight=".3" >

            <TextView
                android:id="@+id/nameYear"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginLeft="10dip"
                android:text="@string/choose_year"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinnerYear"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="15dip"
                android:drawSelectorOnTop="true"
                android:entries="@array/year_arrays"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dip"
            android:orientation="horizontal"
            android:layout_weight=".3" >

            <TextView
                android:id="@+id/name"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dip"
                android:text="@string/choose_type"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/SpinnerType"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:layout_marginRight="15dip"
                android:layout_marginLeft="14dp"
                android:layout_toEndOf="@+id/name"
                android:drawSelectorOnTop="true"
                android:entries="@array/type_arrays"
                android:gravity="center"
                android:textColor="#ffffff" />
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2" >

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/pesquise" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>